--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reach/router": "^1.2.1",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
+    "chalk": "^2.4.2",
     "downshift": "^3.3.1",
     "history": "^4.10.1",
     "match-sorter": "^4.0.1",
