--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-window": "^1.8.5",
-    "stop-runaway-react-effects": "^1.2.0"
+    "stop-runaway-react-effects": "^1.2.0",
+    "workerize": "^0.1.7"
   },
   "devDependencies": {
     "cross-spawn": "^7.0.0",
@@ -33,7 +34,8 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.17.1",
     "react-scripts": "^3.0.1",
-    "replace-in-file": "^4.1.0"
+    "replace-in-file": "^4.1.0",
+    "workerize-loader": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
