--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.9.0",
     "react-window": "^1.8.5",
     "stop-runaway-react-effects": "^1.2.0",
+    "use-interval": "^1.1.0",
     "workerize": "^0.1.7"
   },
   "devDependencies": {
