--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.1.4",
+    "@testing-library/react": "^9.2.0",
     "chalk": "^2.4.2",
-    "downshift": "^3.3.1",
+    "downshift": "^3.3.4",
     "history": "^4.10.1",
-    "match-sorter": "^4.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "match-sorter": "^4.0.2",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
     "react-window": "^1.8.5",
     "stop-runaway-react-effects": "^1.2.0",
     "use-interval": "^1.1.0",
@@ -29,19 +29,21 @@
   },
   "devDependencies": {
     "cross-spawn": "^7.0.0",
-    "eslint": "^6.4.0",
-    "husky": "^3.0.5",
+    "eslint": "^6.5.1",
+    "husky": "^3.0.8",
     "inquirer": "^7.0.0",
     "is-ci": "^2.0.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.17.1",
-    "react-scripts": "^3.0.1",
+    "preval.macro": "^3.0.0",
+    "react-scripts": "^3.2.0",
     "replace-in-file": "^4.1.0",
     "workerize-loader": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:profile": "react-scripts build --profile",
     "test": "react-scripts test --env=jsdom",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
