--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "@testing-library/jest-dom": "^4.1.1",
+    "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.2.0",
     "chalk": "^2.4.2",
     "downshift": "^3.3.4",
     "history": "^4.10.1",
     "match-sorter": "^4.0.2",
+    "preval.macro": "^3.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-window": "^1.8.5",
@@ -35,12 +36,13 @@
     "is-ci": "^2.0.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.17.1",
-    "preval.macro": "^3.0.0",
     "react-scripts": "^3.2.0",
     "replace-in-file": "^4.1.0",
+    "serve": "^11.2.0",
     "workerize-loader": "^1.1.0"
   },
   "scripts": {
+    "serve": "serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:profile": "react-scripts build --profile",
