--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "@kentcdodds/react-workshop-app": "^2.7.3",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
-    "chalk": "^3.0.0",
-    "downshift": "^5.0.4",
+    "@kentcdodds/react-workshop-app": "^2.9.6",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
+    "chalk": "^4.0.0",
+    "codegen.macro": "^4.0.0",
+    "downshift": "^5.0.5",
     "history": "^4.10.1",
-    "match-sorter": "^4.0.2",
-    "codegen.macro": "^3.0.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "match-sorter": "^4.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-window": "^1.8.5",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
@@ -32,13 +33,13 @@
   "devDependencies": {
     "husky": "^4.2.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "react-scripts": "^3.4.0"
+    "prettier": "^2.0.2",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node ./scripts/setup",
