--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:profile": "react-scripts build --profile",
     "serve": "serve -s build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node ./scripts/setup",
     "lint": "eslint .",
-    "validate": "npm-run-all --parallel build test:coverage lint"
+    "validate": "npm-run-all --parallel build:profile test:coverage lint"
   },
   "husky": {
     "hooks": {
