--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@testing-library/react": "^10.0.2",
     "chalk": "^4.0.0",
     "codegen.macro": "^4.0.0",
+    "d3-geo": "^1.12.0",
     "downshift": "^5.1.1",
     "history": "^4.10.1",
     "jest-environment-jsdom-sixteen": "^1.0.3",
+    "lodash": "^4.17.15",
     "match-sorter": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15",
     "react-window": "^1.8.5",
+    "topojson-client": "^3.1.0",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
     "workerize": "^0.1.8",
