use jared-recoil instead
Thanks @jaredpalmer

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@kentcdodds/react-workshop-app": "^2.11.0",
-    "@kentcdodds/recoil-with-utils": "0.0.8-alpha.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.0.4",
     "chalk": "^4.0.0",
@@ -23,6 +22,7 @@
     "d3-geo": "^1.12.1",
     "downshift": "^5.4.2",
     "history": "^4.10.1",
+    "jared-recoil": "0.0.15",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lodash": "^4.17.15",
     "match-sorter": "^4.1.0",
