--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run validate"
+      "pre-commit": "node ./scripts/pre-commit",
+      "pre-push": "node ./scripts/pre-push"
     }
   },
   "jest": {
@@ -86,5 +87,13 @@
       "Firefox ESR",
       "not ie < 11"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kentcdodds/react-performance.git"
+  },
+  "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
+  "bugs": {
+    "url": "https://github.com/kentcdodds/react-performance/issues"
   }
 }
