--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-performance",
-  "private": true,
+  "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
   "title": "React Performance ⚡",
+  "private": true,
   "version": "1.0.0",
   "description": "React Performance Workshop",
   "keywords": [],
@@ -9,12 +10,12 @@
   "license": "GPL-3.0-only",
   "main": "src/index.js",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
+    "node": "12 || 14 || 15",
     "npm": ">=6"
   },
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
-    "@kentcdodds/react-workshop-app": "^3.1.1",
+    "@kentcdodds/react-workshop-app": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -29,7 +30,7 @@
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^9.1.2",
-    "react-virtual": "^2.4.0",
+    "react-virtual": "^2.5.0",
     "recoil": "0.1.2",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.3.0",
@@ -95,8 +96,10 @@
     "type": "git",
     "url": "git+https://github.com/kentcdodds/react-performance.git"
   },
-  "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
   "bugs": {
     "url": "https://github.com/kentcdodds/react-performance/issues"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
