Updated the dependencies to support TypeScript.

--- a/package.json
+++ b/package.json
@@ -16,49 +16,57 @@
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@kentcdodds/react-workshop-app": "^4.3.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "chalk": "^4.1.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
+    "chalk": "^4.1.1",
     "codegen.macro": "^4.1.0",
     "d3-geo": "^2.0.1",
-    "downshift": "^6.1.7",
-    "history": "^5.1.0",
+    "downshift": "^6.1.3",
+    "history": "^5.0.0",
     "lodash": "^4.17.21",
-    "match-sorter": "^6.3.1",
+    "match-sorter": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-spring": "^9.3.0",
+    "react-spring": "^9.2.3",
     "react-use-gesture": "^9.1.3",
-    "react-virtual": "^2.8.2",
+    "react-virtual": "^2.7.1",
     "recoil": "0.1.2",
     "topojson-client": "^3.1.0",
-    "use-interval": "^1.4.0",
-    "vanilla-tilt": "^1.7.2",
+    "use-interval": "^1.3.0",
+    "vanilla-tilt": "^1.7.0",
     "workerize": "^0.1.8",
-    "workerize-loader": "^1.3.0"
+    "workerize-loader": "^1.3.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
+    "@types/d3-geo": "^3.0.2",
+    "@types/lodash": "^4.14.176",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/topojson-client": "^3.1.0",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "patch-package": "^6.4.7",
+    "prettier": "^2.3.0",
     "react-scripts": "^4.0.3",
-    "serve": "^13.0.2"
+    "serve": "^12.0.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
+    "postinstall": "patch-package --patch-dir config/patches",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:profile": "react-scripts build --profile",
-    "serve": "serve -s build",
-    "test": "react-scripts test",
-    "test:coverage": "npm run test -- --watchAll=false --coverage",
+    "test": "react-scripts test --env=jsdom",
+    "test:coverage": "npm run test -- --watchAll=false",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node setup",
     "lint": "eslint .",
     "format": "prettier --write \"./src\"",
-    "validate": "npm-run-all --parallel build:profile test:coverage lint"
+    "typecheck": "tsc -b",
+    "validate": "npm-run-all --parallel build test:coverage lint typecheck"
   },
   "husky": {
     "hooks": {
