--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   "license": "GPL-3.0-only",
   "main": "src/index.js",
   "engines": {
-    "node": "12 || 14 || 15 || 16",
+    "node": "14 || 16 || 18",
     "npm": ">=6"
   },
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
-    "@kentcdodds/react-workshop-app": "^5.0.0",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^14.1.0",
+    "@kentcdodds/react-workshop-app": "^6.0.0",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "chalk": "^4.1.2",
     "codegen.macro": "^4.1.0",
     "d3-geo": "^2.0.1",
     "downshift": "^6.1.7",
-    "history": "^5.1.0",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-spring": "^9.3.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-spring": "^9.4.5",
     "react-use-gesture": "^9.1.3",
-    "react-virtual": "^2.8.2",
+    "react-virtual": "^2.10.4",
     "recoil": "0.1.2",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.4.0",
@@ -38,20 +38,21 @@
     "workerize-loader": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.4",
-    "@types/react-dom": "^18.0.0",
+    "@craco/craco": "^6.4.3",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
-    "react-scripts": "^4.0.3",
+    "prettier": "^2.6.2",
+    "react-scripts": "^5.0.1",
     "serve": "^13.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:profile": "react-scripts build --profile",
+    "start": "craco start",
+    "build": "craco build",
+    "build:profile": "craco build --profile",
     "serve": "serve -s build",
-    "test": "react-scripts test",
+    "test": "craco test",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node setup",
@@ -72,11 +73,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "babel": {
-    "presets": [
-      "babel-preset-react-app"
-    ]
   },
   "browserslist": {
     "development": [
