--- a/exercises/04.calculations/04.solution.async/package.json
+++ b/exercises/04.calculations/04.solution.async/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises__sep__04.calculations__sep__03.solution.worker",
+  "name": "exercises__sep__04.calculations__sep__04.solution.async",
   "private": true,
   "version": "0.0.0",
   "type": "module",
