--- a/exercises/04.code-splitting/01.problem.lazy/package.json
+++ b/exercises/04.code-splitting/01.problem.lazy/package.json
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/d3-geo": "^3.1.0",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/topojson-client": "^3.1.4",
     "@vitejs/plugin-react": "^4.0.3",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
