--- a/exercises/04.code-splitting/01.solution.lazy/package.json
+++ b/exercises/04.code-splitting/01.solution.lazy/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/d3-geo": "^3.1.0",
+    "@types/topojson-client": "^3.1.4",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
