--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-performance",
   "private": true,
-  "kcd-workshop": {
+  "epicshop": {
     "title": "React Performance ⚡",
     "githubRoot": "https://github.com/epicweb-dev/react-performance/blob/main"
   },
@@ -10,25 +10,20 @@
     "#*": "./*"
   },
   "scripts": {
-    "postinstall": "cd ./kcdshop && npm install",
-    "start": "npx --prefix ./kcdshop kcdshop start",
-    "dev": "npx --prefix ./kcdshop kcdshop start",
+    "postinstall": "cd ./epicshop && npm install",
+    "start": "npx --prefix ./epicshop epicshop start",
+    "dev": "npx --prefix ./epicshop epicshop start",
+    "setup": "node ./epicshop/setup.js",
+    "setup:custom": "node ./epicshop/setup-custom.js",
     "build": "cd ./playground && npm run build",
     "preview": "cd ./playground && npm run preview",
-    "setup": "node ./setup.js",
-    "setup:custom": "node ./scripts/setup-custom.js",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "typecheck": "tsc -b",
-    "test": "cd ./kcdshop && npm test",
-    "validate:all": "npm-run-all --parallel --print-label --print-name --continue-on-error lint typecheck"
+    "typecheck": "tsc -b"
   },
   "keywords": [],
   "author": "Kent C. Dodds <me@kentcdodds.com> (https://kentcdodds.com/)",
   "license": "GPL-3.0-only",
-  "eslintIgnore": [
-    "/node_modules"
-  ],
   "engines": {
     "node": ">=18",
     "npm": ">=8.16.0",
@@ -39,27 +34,68 @@
     "react-dom": "18.3.0-canary-a870b2d54-20240314"
   },
   "devDependencies": {
-    "@kentcdodds/workshop-utils": "^3.14.1",
-    "@remix-run/eslint-config": "^2.4.1",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/d3-geo": "^3.1.0",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
-    "@types/topojson-client": "^3.1.4",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
-    "chokidar": "^3.6.0",
-    "eslint": "^8.56.0",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
-    "execa": "^8.0.1",
-    "fs-extra": "^11.2.0",
+    "eslint-plugin-import": "^2.29.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.2"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
   "workspaces": [
     "./exercises/**/*"
+  ],
+  "prettier": {
+    "arrowParens": "avoid",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "embeddedLanguageFormatting": "auto",
+    "endOfLine": "lf",
+    "htmlWhitespaceSensitivity": "css",
+    "insertPragma": false,
+    "jsxSingleQuote": false,
+    "printWidth": 80,
+    "proseWrap": "always",
+    "quoteProps": "as-needed",
+    "requirePragma": false,
+    "semi": false,
+    "singleAttributePerLine": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": true,
+    "overrides": [
+      {
+        "files": [
+          "**/*.json"
+        ],
+        "options": {
+          "useTabs": false
+        }
+      },
+      {
+        "files": [
+          "**/*.mdx"
+        ],
+        "options": {
+          "proseWrap": "preserve",
+          "htmlWhitespaceSensitivity": "ignore"
+        }
+      }
+    ]
+  },
+  "prettierIgnore": [
+    "node_modules",
+    "**/build/**",
+    "**/public/build/**",
+    ".env",
+    "**/package.json",
+    "**/tsconfig.json",
+    "**/package-lock.json",
+    "**/playwright-report/**"
   ]
 }
