upgrade to react

--- a/exercises/04.code-splitting/01.problem.lazy/package.json
+++ b/exercises/04.code-splitting/01.problem.lazy/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@use-gesture/react": "^10.3.0",
     "d3-geo": "^3.1.0",
-    "react": "18.3.0-canary-a870b2d54-20240314",
-    "react-dom": "18.3.0-canary-a870b2d54-20240314",
+    "react": "19.0.0-beta-94eed63c49-20240425",
+    "react-dom": "19.0.0-beta-94eed63c49-20240425",
     "react-spring": "^9.7.3",
     "spin-delay": "^2.0.0",
     "topojson-client": "^3.1.0"
@@ -21,12 +21,16 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/d3-geo": "^3.1.0",
     "@types/node": "^20.9.1",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "npm:types-react@19.0.0-alpha.5",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.5",
     "@types/topojson-client": "^3.1.4",
     "@vitejs/plugin-react": "^4.0.3",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^5.2.10"
+  },
+  "overrides": {
+    "@types/react": "$@types/react",
+    "@types/react-dom": "$@types/react-dom"
   }
 }
