--- a/exercises/04.code-splitting/02.problem.eager/package.json
+++ b/exercises/04.code-splitting/02.problem.eager/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "epicshop": {
+    "stackBlitzConfig": {
+      "view": "both"
+    }
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
