figure out how to track renders

--- a/examples/unnecessary-rerenders/tsconfig.json
+++ b/examples/unnecessary-rerenders/tsconfig.json
@@ -3,7 +3,7 @@
 	"extends": ["@epic-web/config/typescript"],
 	"compilerOptions": {
 		"paths": {
-			"#*": ["../../../shared/*"]
+			"#shared*": ["../../../shared/*"]
 		}
 	}
 }
