--- a/exercises/01.elements/01.solution.reuse/tsconfig.json
+++ b/exercises/01.elements/01.solution.reuse/tsconfig.json
@@ -3,7 +3,7 @@
 	"extends": ["@epic-web/config/typescript"],
 	"compilerOptions": {
 		"paths": {
-			"#*": ["../../../shared/*"]
+			"#shared*": ["../../../shared/*"]
 		}
 	}
 }
