--- a/exercises/03.concurrent-rendering/01.solution.deferred/tsconfig.json
+++ b/exercises/03.concurrent-rendering/01.solution.deferred/tsconfig.json
@@ -3,7 +3,7 @@
 	"extends": ["@epic-web/config/typescript"],
 	"compilerOptions": {
 		"paths": {
-			"#*": ["../../../shared/*"]
+			"#shared*": ["../../../shared/*"]
 		}
 	}
 }
