--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "git": ">=2.18.0"
   },
   "dependencies": {
+    "@epic-web/workshop-utils": "^4.28.2",
     "react": "19.0.0-beta-94eed63c49-20240425",
     "react-dom": "19.0.0-beta-94eed63c49-20240425"
   },
