--- a/epicshop/package.json
+++ b/epicshop/package.json
@@ -2,12 +2,15 @@
   "type": "module",
   "scripts": {
     "test:setup": "playwright install chromium --with-deps",
-    "test": "playwright test"
+    "test": "playwright test && node test.js"
   },
   "dependencies": {
     "@epic-web/config": "^1.11.2",
     "@epic-web/workshop-app": "^4.28.2",
     "@epic-web/workshop-utils": "^4.28.2",
-    "execa": "^9.2.0"
+    "enquirer": "^2.4.1",
+    "execa": "^9.4.0",
+    "match-sorter": "^6.3.4",
+    "p-limit": "^6.1.0"
   }
 }
