--- a/exercises/07.windowing/01.problem.virtualizer/package.json
+++ b/exercises/07.windowing/01.problem.virtualizer/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test --config=./tests/playwright.config.js"
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.1.2",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@epic-web/config": "^1.5.4",
+    "@playwright/test": "^1.47.2",
     "@types/node": "^20.9.1",
     "@types/react": "npm:types-react@19.0.0-alpha.5",
     "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.5",
