--- a/exercises/07.windowing/01.solution.virtualizer/package.json
+++ b/exercises/07.windowing/01.solution.virtualizer/package.json
@@ -19,23 +19,19 @@
     "comlink": "^4.4.1",
     "downshift": "^8.3.2",
     "match-sorter": "^6.3.4",
-    "react": "19.0.0-beta-94eed63c49-20240425",
-    "react-dom": "19.0.0-beta-94eed63c49-20240425",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "spin-delay": "^2.0.0"
   },
   "devDependencies": {
     "@epic-web/config": "^1.5.4",
     "@playwright/test": "^1.47.2",
     "@types/node": "^20.9.1",
-    "@types/react": "npm:types-react@19.0.0-alpha.5",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.5",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react": "^4.0.3",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^5.2.10"
-  },
-  "overrides": {
-    "@types/react": "$@types/react",
-    "@types/react-dom": "$@types/react-dom"
   }
 }
