--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -33,8 +33,8 @@ jobs:
         run: npm run typecheck
 
       # TODO: re-enable linting
-      # - name: ⬣ ESLint
-      #   run: npm run lint
+      - name: ⬣ ESLint
+        run: npm run lint
 
       # TODO: get this working again
       # - name: ⬇️ Install Playwright
